fourth commit of guessing game

--- a/index.html
+++ b/index.html
@@ -34,13 +34,19 @@
       } else {
         alert("Sorry, "+userName+". That's incorrect. I actually did go to college in Pennsylvania.");
       }
-
       var timbers = prompt("Am I a fan of the Portland Timbers? Please answer Yes or No.","").toUpperCase();
       console.log("Second question. The user's answer was: "+timbers);
       if (timbers === 'YES') {
         alert("That's right, "+userName+". You bet I am!\nKeep it up, Rose City! Don't let up, no pity!");
       } else {
         alert("Dang, "+userName+". That's dead wrong.\nYou didn't think that I was a Sounders fan, did you?");
+      }
+      var beer = prompt("Do I like beer? Please answer Yes or No.","").toUpperCase();
+      console.log("Final question. The user's answer was: "+beer);
+      if (beer === 'YES') {
+        alert("Trick question, "+userName+"! I don't just like beer, I LOVE beer!");
+      } else {
+        alert("You know me too well, "+userName+".\nYou realized that I was trying to fool you, as my feelings about beer are so much stronger than simply just liking it.\nYou've earned my respect and admiration, cheers!");
       }
       </script>
   </body>
