updated to write initial response (to prompt for username) to document

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <li>Take what I learn at Code Fellows and start a new career in web development</li>
       <li>Learn mountain climbing and summit Mt. Hood</li>
     </ul>
+    <h3 id="response">Test</h3>
+ <input id="button" type="button" value="Get Started" onclick="getStarted()">
+ <input id="button" type="button" value="Play Game" onclick="playGame()">
+
     <script type="text/javascript" src="game.js">
     </script>
   </body>
