added colors and images to answers

--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
   <body>
     <h1>Hi! I'm Drew Stock.</h1>
     <h3>A little bit about me...</h3>
-    <p>In 2013, my wife, April &amp; I moved to Portland from Pittsburgh, Pennsylvania. I'm still a fan of the Pittsburgh Steelers &amp; Penguins (2016 Stanley Cup champions! Woo hoo!) and now I'm also a fan of the Portland Timbers! I've grown to love the culture, food and craft beers of Portland and the Pacific NW in general. I also love to explore our beautiful natural surroundings, and go hiking in the Columbia River Gorge and biking on all our local bike trails.</p>
+    <p class="background-info">In 2013, my wife, April &amp; I moved to Portland from Pittsburgh, Pennsylvania. I'm still a fan of the Pittsburgh Steelers &amp; Penguins and now I'm also a fan of the Portland Timbers! I've grown to love the culture and food of the Pacific NW, and I enjoy exploring our beautiful natural surroundings. Hiking in the Columbia River Gorge is one of my favorite outdoor activities, you just might see me out on the trail!</p>
     <h4>Experience</h4>
-    <ul>
-      <li>I've worked for 10+ years in the management of meetings and tradeshows, specializing in the onsite execution of events</li>
-      <li>I recently started up a video production business, with a goal of providing video content for the meetings &amp; events industry, local businesses and nonprofits</li>
+    <ul class="background-info">
+      <li>Managed the onsite deployment of meetings, events and tradeshows for 10+ years</li>
+      <li>Started a video production business, with a goal of providing video content for the meetings &amp; events industry, local businesses and nonprofits</li>
     </ul>
     <h4>Education</h4>
-    <ul>
+    <ul class="background-info">
       <li>Graduate of Penn State University, with a Bachelor's degree in Film &amp; Video Production</li>
     </ul>
     <h4>Goals</h4>
-    <ul>
-      <li>Learn to code HTML, CSS &amp; JavaScript</li>
-      <li>Take what I learn at Code Fellows and start a new career in web development</li>
+    <ul class="background-info">
+      <li>Learn to code HTML, CSS &amp; JavaScript, then take what I've learned and start a new career in web development</li>
     </ul>
     <div>
       <h3 id="response">Would you like to play a game? Please click Get Started</h3>
