created function to find element and assign innerHTML

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>Learn to code HTML, CSS &amp; JavaScript, then take what I've learned and start a new career in web development</li>
     </ul>
     <div>
-      <h3 id="response">Would you like to play a game? Please click Get Started</h3>
+      <h3 id="response">Would you like to play a game? Please click Get Started<br /><br /></h3>
     </div>
     <div id="options">
       <input class="button" type="button" value="Get Started" onclick="getStarted()">
